2003-05-28  Satoru Takabayashi  <satoru@namazu.org>

	* Migemo: Version 0.40 Released.

	* Makefile.am (EXTRA_DIST): Add migemo.rb.in

	* configure.in: Bumped version number to 0.40.
	(AC_OUTPUT): Add migemo.rb.

	* migemo.el.in (migemo-get-pattern): Use migemo-white-space-regexp
	variable.
	(migemo-white-space-regexp): New variable.
	Add -*- coding: euc-jp-unix -*- to the beginning of the file.

2003-05-27  Satoru Takabayashi  <satoru@namazu.org>

	* migemo-grep (parse_options): Add parens to String#sub method to
	avoid warnings.

	* migemo (main): Insert migemo.insertion in the middle of each
	segment. Thanks to Hideyuki Shirai for the suggestion [migemo:00232]

	* migemo.el.in (migemo-get-pattern): Fix paren matching.

2003-05-26  Satoru Takabayashi  <satoru@namazu.org>

	* migemo.el.in (migemo-get-pattern): Remove the extra ) at the end.

	* migemo-convert.rb: Add parens to sprintf method to avoid
	warnings.

	* migemo-index.rb: Add parens to Array#pack method to avoid
	warnings.

	* migemo (parse_options): Add parens to String#sub method to avoid
	warnings.

2003-05-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-get-pattern): Check null word for CMIGEMO.

2003-05-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-search-pattern-alist): New variable.
	(migemo-search-pattern-get): New inline macro.
	(migemo-forward): Use `migemo-search-pattern-get'.
	(migemo-backward): Ditto. Try `looking-at' when migemo search.
	(isearch-search-and-update): New advice.
	(isearch-mode, isearch-done, migemo-dabbrev-expand-done)
	(migemo-dabbrev-expand): Set `migemo-search-pattern-alist' to nil.
	(migemo-isearch-lazy-highlight-search): Use
	`migemo-search-pattern-get'.
	(isearch-highlightify-region): Ditto.

2003-05-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (top): Modify comment for CMIGEMO.
	(migemo-dictionary, migemo-user-dictionary)
	(migemo-regex-dictionary): Add doc-string.